--- a/wallet.ui
+++ b/wallet.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: #000020</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
@@ -27,11 +30,14 @@
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;oage 3&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tab">
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
      <attribute name="title">
-      <string>Tab 1</string>
+      <string>market</string>
      </attribute>
      <widget class="QWidget" name="gridLayoutWidget_2">
       <property name="geometry">
@@ -45,6 +51,9 @@
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="4" column="0">
         <widget class="QLabel" name="label">
+         <property name="styleSheet">
+          <string notr="true">color: #fff</string>
+         </property>
          <property name="text">
           <string>BTCIRT</string>
          </property>
@@ -52,6 +61,9 @@
        </item>
        <item row="5" column="0">
         <widget class="QLabel" name="label_3">
+         <property name="styleSheet">
+          <string notr="true">color: #fff</string>
+         </property>
          <property name="text">
           <string>USDTIRT</string>
          </property>
@@ -59,6 +71,9 @@
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_2">
+         <property name="styleSheet">
+          <string notr="true">color: #fff</string>
+         </property>
          <property name="text">
           <string>ETHIRT</string>
          </property>
@@ -66,6 +81,9 @@
        </item>
        <item row="4" column="1">
         <widget class="QLabel" name="label_5">
+         <property name="styleSheet">
+          <string notr="true">color: #fff</string>
+         </property>
          <property name="text">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;TextLabel&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -73,6 +91,9 @@
        </item>
        <item row="2" column="1">
         <widget class="QLabel" name="label_4">
+         <property name="styleSheet">
+          <string notr="true">color: #fff</string>
+         </property>
          <property name="text">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;TextLabel&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -80,6 +101,9 @@
        </item>
        <item row="5" column="1">
         <widget class="QLabel" name="label_6">
+         <property name="styleSheet">
+          <string notr="true">color: #fff</string>
+         </property>
          <property name="text">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;TextLabel&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -87,6 +111,9 @@
        </item>
        <item row="1" column="1">
         <widget class="QPushButton" name="pushButton_5">
+         <property name="styleSheet">
+          <string notr="true">background-color: #00e5ff</string>
+         </property>
          <property name="text">
           <string>update price</string>
          </property>
@@ -94,6 +121,9 @@
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_7">
+         <property name="styleSheet">
+          <string notr="true">color: #fff</string>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -104,7 +134,7 @@
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
-      <string>Tab 2</string>
+      <string>trade</string>
      </attribute>
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
@@ -115,6 +145,9 @@
         <height>22</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: #7ec8e3</string>
+      </property>
      </widget>
      <widget class="QPushButton" name="pushButton_1">
       <property name="geometry">
@@ -124,6 +157,9 @@
         <width>75</width>
         <height>23</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: #00e5ff</string>
       </property>
       <property name="text">
        <string>SELL</string>
@@ -138,6 +174,9 @@
         <height>23</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: #00e5ff</string>
+      </property>
       <property name="text">
        <string>BUY</string>
       </property>
@@ -145,7 +184,7 @@
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
-      <string>Page</string>
+      <string>transaction</string>
      </attribute>
      <widget class="QPushButton" name="pushButton_3">
       <property name="geometry">
@@ -155,6 +194,9 @@
         <width>75</width>
         <height>23</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: #00e5ff</string>
       </property>
       <property name="text">
        <string>Deposit</string>
@@ -169,6 +211,9 @@
         <height>23</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: #00e5ff</string>
+      </property>
       <property name="text">
        <string>Withdraw</string>
       </property>
@@ -176,20 +221,23 @@
      <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
-        <x>26</x>
+        <x>16</x>
         <y>19</y>
-        <width>171</width>
+        <width>181</width>
         <height>31</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">color: #fff</string>
+      </property>
       <property name="text">
-       <string/>
+       <string>balance: 0</string>
       </property>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
-      <string>Page</string>
+      <string>chart</string>
      </attribute>
     </widget>
    </widget>
