update and finish connection

--- a/password.ui
+++ b/password.ui
@@ -23,7 +23,7 @@
       <x>0</x>
       <y>0</y>
       <width>261</width>
-      <height>189</height>
+      <height>208</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -65,6 +65,13 @@
      </item>
      <item>
       <widget class="QLineEdit" name="lineEdit_3"/>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QPushButton" name="pushButton">
