--- a/sign in.ui
+++ b/sign in.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: #000020</string>
+   <string notr="true">background-color:#0e0e4e</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="verticalLayoutWidget">
@@ -57,9 +57,9 @@
           <colorrole role="Button">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -84,18 +84,18 @@
           <colorrole role="Base">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
           <colorrole role="Window">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -113,9 +113,9 @@
           <colorrole role="Button">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -140,18 +140,18 @@
           <colorrole role="Base">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
           <colorrole role="Window">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -169,9 +169,9 @@
           <colorrole role="Button">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -196,18 +196,18 @@
           <colorrole role="Base">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
           <colorrole role="Window">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -252,9 +252,9 @@
           <colorrole role="Button">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -279,18 +279,18 @@
           <colorrole role="Base">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
           <colorrole role="Window">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -308,9 +308,9 @@
           <colorrole role="Button">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -335,18 +335,18 @@
           <colorrole role="Base">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
           <colorrole role="Window">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -364,9 +364,9 @@
           <colorrole role="Button">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
@@ -391,18 +391,18 @@
           <colorrole role="Base">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
           <colorrole role="Window">
            <brush brushstyle="SolidPattern">
             <color alpha="255">
-             <red>0</red>
-             <green>0</green>
-             <blue>32</blue>
+             <red>14</red>
+             <green>14</green>
+             <blue>78</blue>
             </color>
            </brush>
           </colorrole>
